[package]
name = "binary-static-analyzer"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "binary-static-analyzer"
path = "src/main.rs"

[dependencies]
regex = "1.5.5"
log = "0.4.14"
env_logger = "0.9.0"
